# snippets

dotfiles/: README.md  vimrc
dotfiles/vimfiles/colors/: pastel.vim  vscode.vim
dotfiles/vimfiles/syntax/: python.vim
dotfiles/win32_garbage/: hotkeys.ahk  install.ps1
gpg_encryption/: README.md
heif_to_jpg/: README.md
linux_gaming/: README.md
qt/: README.md
qt/cpp/: CMakeLists.txt  README.md  build.bat  build.sh
qt/cpp/src/: mainwindow.cpp  mainwindow.h
qt/python/: README.md  launch.bat  launch.sh  main.py  requirements.txt
rclone/: README.md
reinstall_windows/: README.md
rsync/: README.md
systemd/: README.md
usd/: README.md
windows_gaming/: 1920x1080.bat  3440x1440.bat  README.md  age_of_mythology.bat  ahk_suspender.bat  backup.bat  cod_mw.bat  computer_sleep.bat  connect_to_wifi.bat  inputs.py  kiosk.py  launch_steam_game.bat  monster_hunter.bat  switch_to_pc.bat  switch_to_tv.bat
